--- a/report/discussion.tex
+++ b/report/discussion.tex
@@ -26,16 +26,18 @@ The use of \texttt{inspect\_ai} was to follow standardised methods for evaluatio
 
 On the topic of running LLM runs asynchronously; despite it being a good idea in theory, in practice running the PaperQA calls in parallel casued a lot of issues. Firstly, it would change the time taken for a a single PaperQA query from around a minute, to around 15 minutes. (This was only for two or three queries in parallel). This would also degrade the performance, as the user would begin to encounter timeout or rate limit errors, leading to loss of money, time and compute resources. In the end, the evaluation runs had to be made in series (one PaperQA call at a time), which actually sped up the code and improved performance. \\
 
-\subsubsection{LLM Models}
+\subsubsection{LLM Models} TODO
 Varying the LLMs did not have a considerable effect on the precision. It seems as though, all of the RAG models, achieved a precision (that used PaperQA over just the base model) achieved 'superhuamn' precision on question answer. Looking at the base model (\texttt{gpt-4o-mini} with no RAG), which achieved identical accuracy and precision, showed the importance of levaraging RAG systems. With no RAG, the model would attempt to answer every single question, and often hallucinating in the process. With RAG, the model because 'aware' of its limitation and the information it had available, which it would then be able to recognise that it was unable to, or had insufficient information to answer the question. \\
 
 It appears that with RAG, the LLM was much less confident than just using a single LLM, preferring to opt for the safer choice of saying it does not know the answer rather than making the incorrect answer. This is a good sign, as it attempts to ground its answer in truth, making it ideal for scientific research. However, the precision was never 100\%, so it was still prone to hallucinating, but much less often comapared to non-RAG performance. 
 
-It appeared that the individual LLM models behind PaperQA made little difference to the precision, but affected the accuracy more. This disparity in accuracy and precision suggests that if PaperQA was able to answer a question, it seemed to be much more confident and more likely to get the asnwer correct. It appears that the \textit{biggest challenge for these models was actually retrieving the correct chunk to find the answer}, and once it had recieved the appropriate chunk of text containing the asnwer, all of the models were fairly simialr in performance at understanding the text itself and extracting the required result. This exaplains the very large variations in accuracy and small variations in precision. 
+It appeared that the individual LLM models behind PaperQA made little difference to the precision, but affected the accuracy more. This disparity in accuracy and precision suggests that if PaperQA was able to answer a question, it seemed to be much more confident and more likely to get the asnwer correct. It appears that the \textit{biggest challenge for these models was actually retrieving the correct chunk to find the answer}, and once it had recieved the appropriate chunk of text containing the asnwer, all of the models were fairly simialr in performance at understanding the text itself and extracting the required result. This explains the very large variations in accuracy and small variations in precision. 
 
-TALK ABOUT CONTEXT WINDOWS AND HOW MINI 4.1 and TURBO compare, what it should be vs what it actually appeared in the results. 
+PaperQA with GPT 4.1 seemed much more hesitant to answer the questions, much more often opting to say it does not know the answer rather than making an incorrect answer. However, the precision was also less on average compared to using GPT-4-Turbo. GPT-4.1 is a newer model, and outperforms GPT-4-Turbo in every benchmark, yet it seemed to underperform on the LitQA test set ofr question answering. This suggested it actually performed more poorly in either the Paper Retrieval or RCS steps, before answering the question. This behaviour is still unexplained with regards to how 4.1 compares to 4-Turbo, as the architectures of these models have neither been released or confirmed. 
 
 Best Performance Gemini Embeddings. Better textual representation made the initial paper search step more effective. All of the papers are biology, they are semantically similar, and so poor embeddings would create confusion and poor ranking, but Gemeini embeddings allowed more nuance and difference to be picked up and helped identify more papers.
+
+TALK ABOUT HOW ALL RUNS WERE EITHER CLOSE TO OR BEAT HUMAN PERFORMANCE. 
 
 
 
@@ -43,22 +45,24 @@ Best Performance Gemini Embeddings. Better textual representation made the initi
 As above, the biggest factor in performance is the retrieval step of PaperQA.
 This is controlled by Top-K and Answer Cutoff.
 
-ANSWER CUTOFF increase = POORER PERFORMANCE. WHY? 
+Increasing the Answer Cutoff led to a decrease in accuracy, but decrease in precision. This goes against the logic of the original paper, who's authors say the opposite. They said that increasing the cutoff would add more key context needed to answer the question (increase accuracy) but adds more distracting irrelevant context (reduces precision). The recreated result shows the opposite. 
 
 TOP K REDUCED = MUCH LOWER ACCURACY. WHY? BUT INCREASING TOP K REDUCED ACCURACY. WHY?
 
 Hvaing a reduced TOP K made a big impact on accuracy. MAKES SENSE AS LESS LIKELY TO FIND THE CORRECT CHUNK. 
 
-NO RCS made a difference, but not as much as changing the top k and answer cutoff. SEEMS CRUCIAL FOR SUPERHUMAN PERFORMANCE. 
+NO RCS made a difference, but not as much as changing the top k and answer cutoff. POSSIBLY, THE NEWER MODELS ARE BETTER AT INITIAL CHOOSING THE BEST PAPERS AND CHUNKS AND HENCE THE RCS STEP BECOMES LESS IMPORTANT. 
 
 \subsubsection{Issues}
 One very important issue noticed was the flucatuation in performance depending on LLM usage.
-Noticed quite late on in the project, after performing a sizable number of runs, it appeared that the performance of LLMs would change depending on when the tests would run even with temperature 0. Looking on forums CITE, it appeared that this was a common problem, especially with OpenAI. Looking into the GPT-4 architecture could return a reason why this is happening. There is no GPT-4 techical paper that details its ful archtitecture due to competition, but leaks, expoert analysis and even confirmation by Sam Altman CITE point ot the fact that GPt-4 is a Mixture of Experts architecture. It is essentially an ensemble model of transformers and neural networks, each specialised for a 'expert' topic, rather than a general transformer, and the query is sent to a number of 'experts' to answer the question. The inference is then distributed to a number of computers and recollected for minimum computational load and maximum speed. However, it is this distributed factor that may cause the performance degradation at peak times. One reason is that even though we set temperature to 0, since the inference is distributed, it is not guaranteed that the same configuration is sent to each device (possibly due to compression etc.), and so floating point errors could accumulate and potentially lead to different outputs. Looking at MOE, it could be possible that at peak times, when resources are contested heavily, models could be degraded to ensure everyone has access to the models (e.g. instead of 3 experts you are only allocated 2). Also, to balance the load, the experts could be given less time for the current user's prompt, so that it is freed for the next user's prompt, resulting in less time for processing. These are all potential ideas why this is happening and is not confirmed by providers such as OpenAI. This points to possibly using less popular providers for better performance. 
+Noticed quite late on in the project, after performing a sizable number of runs, it appeared that the performance of LLMs would change depending on when the tests would run even with temperature 0. Looking on forums CITE, it appeared that this was a common problem, especially with OpenAI. Looking into the GPT-4 architecture could return a reason why this is happening. There is no GPT-4 techical paper that details its ful archtitecture due to competition, but forums CITE , leaks CITE  and expoert analysis point to the fact that GPt-4 is a Mixture of Experts architecture. It is essentially an ensemble model of transformers and neural networks, each specialised for a 'expert' topic, rather than a general transformer, and the query is sent to a number of 'experts' to answer the question. The inference is then distributed to a number of computers and recollected for minimum computational load and maximum speed. However, it is this distributed factor that may cause the performance degradation at peak times. One reason is that even though we set temperature to 0, since the inference is distributed, it is not guaranteed that the same configuration is sent to each device (possibly due to compression etc.), and so floating point errors could accumulate and potentially lead to different outputs. Looking at MOE, it could be possible that at peak times, when resources are contested heavily, models could be degraded to ensure everyone has access to the models (e.g. instead of 3 experts you are only allocated 2). Also, to balance the load, the experts could be given less time for the current user's prompt, so that it is freed for the next user's prompt, resulting in less time for processing. These are all potential ideas why this is happening and is not confirmed by providers such as OpenAI. This points to possibly using less popular providers for better performance. 
+
+This was noticed for the evaluation runs of the following experiments: PaperQA with GPT-4.1, PaperQA with Answer Cutoff @ 5, PaperQA with Top-k @ 1, 5, and 15. All of these experiments were run on the same day, yet all had lower then expected performance. 
 
 There seemed to also be a disparity between the effect of hardware on the performance of the runs. Due to technical issues, some of the runs had to be run on two different laptops. One laptop had below average hardware specifications (no GPU, Intel 12th Gen 5 Series CPU), and the other had top of the line specifications (e.g. top-end AMD GPU and CPU). Despite running the exact same code, and the same version for the packages, there was a slight difference in performance. Predictably, the better laptop completed the evaluation of the test set quicker, but the difference in time was substantial (usually 35 minutes, instead of 50 minutes). Considering the code is primarily API calls, this was peculiar, as there was no difference in code or packages, and there seemed to be no part of the code that relied heavily on CPU or GPU performance. 
 The difference in specs did not affect single PaperQA runs, but it did affect the performance of evaluation runs of the full test dataset. The faster runs also often came with higher accuracy and roughly equal precision. There seemed to be no plausible explanation for this, and the only way to confirm this would be to perform an focused, individual study instead. 
 
-THESE ISSUES SEEM TO CAUSE ERRORNEOUS RUNS, ESPECIALLY FOR NO RCS, 4.1, 4-TURBO. High variation, and hard to find explanation for the high performance. 
+
 
 \section{Future Work}
 
