--- a/report/methods.tex
+++ b/report/methods.tex
@@ -42,7 +42,7 @@ This format does not allow for information such as questions, choice, or target 
 This prevents any information to the scorer the evaluation fails. \\
 
 To this end, a custom package was built for multi-agent MCQ evaluation using \texttt{inspect\_ai}. The package is built to intergrate easily with Inspect AI, and allows any multi agent system to be used, as long as it takes in a question and outputs a text reply. 
-It levarages a custom Dataset builder, creating custom Samples by reading the the \texttt{pandas} DataFrames into the specified Structured Output JSON form. The custom Samples would be sent to a custom bridge agent containing the multi-agent MCQ function, which produced an answer that needed to be evaluted by a Scorer. Answers would be classified as CORRECT, INCORRECT, or NA. NA represents when the machine fails, or when there is insufficient information to answer the question. The answer will also be labelled as correct if NA is chosen and NA is the correct option. This was implemented as a custom \texttt{inspect\_ai} scorer. The custom scorer function that can read the Structured Output JSON from AG2. From this, it converts the data into \texttt{inspect\_ai.Score} object, which can be used by \texttt{eval} to calculate the performance of the LLM agent's performance across the whole task. \\
+It levarages a custom Dataset builder, creating custom Samples by reading the the \texttt{pandas} DataFrames into the specified Structured Output JSON form. The custom Samples would be sent to a custom bridge agent containing the multi-agent MCQ function, which produced an answer that needed to be evaluted by a Scorer. Answers would be classified as CORRECT, INCORRECT, or NA. NA represents when the machine fails, or when there is insufficient information to answer the question. The answer will also be labelled as correct if NA is chosen and NA is the correct option. This was based on the same implementation as the \texttt{insepct\_evals} package. This was implemented as a custom \texttt{inspect\_ai} scorer. The custom scorer is a function that can read the Structured Output JSON from AG2. From this, it converts the data into \texttt{inspect\_ai.Score} object, which can be used by \texttt{eval} to calculate the performance of the LLM agent's performance across the whole task. \\
 
 \subsection{Hyperparameters}
 
